Makes pledge CTA button stop being autohuge on firefox.

--- a/app/assets/stylesheets/pledge.css
+++ b/app/assets/stylesheets/pledge.css
@@ -40,7 +40,7 @@
   font-family: var(--title-font);
   font-weight: 500;
   font-size: 1.2em;
-  padding: .3em .99em .5em .99em;
+  padding: .3em .98em .5em .98em;
   margin-top: 1em;
   text-transform: uppercase;
   text-decoration: none;
